     * Some color changes for AutoIt (BenBE)
     * Added support for basic include directive processing for AutoIt (BenBE)
     * Added support for ::-style labels as comments (SF#2947393, BenBE)
     * Removed backslash as Escape Char in T-SQL (SF#2939199, Bruno Braga)
     * Added Nested Comments Support for Haskell (SF#2922317, BenBE)
Version 1.0.8.6
  -  Added language files
     * Clojure (Jess Johnson)
     * Cuesheet (Benny Baumann)
     * F# (Julien Ortin)
     * GAMBAS (Jesus Guardon)
     * Logtalk (Paulo Moura)
     * MapBasic (Tomasz Berus)
     * NewLisp (cormullion)
     * Perl 6 (Kodi Arfer)
     * Pike (Rick E.)
     * SystemVerilog (Sean O'Boyle)
  -  Reworked parts of the number support (BenBE)
  -  Improvements to language fiels (BenBE)
     * Fixed broken links in R/S+ language file (BenBE)
     * Fixed an issue with if= argument for dd command (BenBE)
     * T-SQL should use GESHI_CAPS_NO_CHANGE for keywords (BenBE)
     * Fixed missed shorthand arg references in Bash (BenBE)
     * Fixed first line not getting highlighted in diff language (BenBE)
     * Added some keywords for csharp (RC)
Version 1.0.8.5
  -  Added language files
     * AutoHotkey (Naveen Garg)
     * Awk (George Pollard)
     * GADV 4CS (Jason Curl)
     * jQuery (Rob Loach)
     * PowerBuilder (Doug Porter)
     * PureBasic (Gustavo Julio Fiorenza)
     * R / S+ (Ron Fredericks, Benilton Carvalho)
  -  Fixed legitimate numbers sometimes missing from highlighting (BenBE)
  -  Fixed a problem with URLs allowing to break highlighting (BenBE)
  -  Allowed for String and Number Styles to be set by the API (BenBE)
  -  Produce valid CSS when languages start with underscore (BenBE)
  -  Duplicate newlines with PRE_TABLE-Header but w/o linenumbers (SF#2838958, BenBE)
  -  Improvements to language files (BenBE)
     * Fixed case-insensitively duplicate keywords (BenBE)
     * DCS language file contained HARDQUOTE section but no hardquotes (BenBE)